--- a/confirmation.html
+++ b/confirmation.html
@@ -67,7 +67,7 @@
         <p><span class="detail">Destination:</span> <span id="user-destination"></span></p>
         <p><span class="detail">Date of Journey:</span> <span id="user-travel-date"></span></p>
         
-        <button><a href="first.html" style="color: #fff; text-decoration: none;">Home</a></button>
+        <button><a href="index.html" style="color: #fff; text-decoration: none;">Home</a></button>
     </div>
 
     <script>
